Bug 345541 - "plugins linked to libxul.so do not load". Patch by Steve Krulewitz <skrulx@gmail.com>. r+sr=jst.